# smrore_sdk

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  mkdocs.yml  test.md
.github/workflows/: ci.yml  pages.yml  release-pdf.yml  release-smoke.yml
doc/: Doxyfile  doxygen_print.css
docs/: examples.md  examples.zh.md  examples_basics.md  examples_basics.zh.md  examples_compliance.md  examples_compliance.zh.md  examples_motion.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  install.md  install.zh.md  support.md  support.zh.md  usage.md  usage.zh.md
docs/api/: index.md  index.zh.md
docs/assets/stylesheets/: extra.css
docs/examples/: config.md  config.zh.md  index.md  index.zh.md  motion.zh.md
docs/python/: api.md  api.zh.md  index.md  index.zh.md
docs/python/examples/: index.md  index.zh.md
examples/: 01_connect.cpp  02_read_state.cpp  03_movej.cpp  04_movel.cpp  CMakeLists.txt
examples/basics/: connect.cpp  error_recovery.cpp  read_state.cpp
examples/compliance/: cartesian_impedance.cpp  fd_cartesian_admittance.cpp
examples/config/: config_limits.cpp  payload.cpp  waypoints.cpp
examples/motion/: async_motion.cpp  motion_api.cpp  move_path.cpp  movec.cpp  movej.cpp  movel.cpp  movep.cpp  servoj.cpp  servop.cpp
examples_py/: README.md
examples_py/basics/: read_state.py
examples_py/motion/: kinematics.py  movej.py
scripts/: build.sh  docs.sh  docs_pdf.sh  download.sh  run_examples_against_sim.sh
scripts/pdf/: bookmarks.py  stamp.py
scripts/pdf/assets/: cover.html  divider.html  toc.html
